--- a/.env.production
+++ b/.env.production
@@ -1,12 +1,13 @@
-APP_ENV=production
+APP_ENV=local
 APP_DEBUG=true
 APP_KEY=xUmasK2yT5JoStKtr7Ke9yjbG0PAwU1u
-DB_HOST=localhost
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
-CACHE_DRIVER=memcached
-SESSION_DRIVER=memcached
+DB_HOST=us-cdbr-azure-southcentral-e.cloudapp.net
+DB_PORT=5000
+DB_DATABASE=HeddokoATi5VwPTd
+DB_USERNAME=bf446e27a5124e
+DB_PASSWORD=7ee876c4
+CACHE_DRIVER=file
+SESSION_DRIVER=file
 QUEUE_DRIVER=gae
 MAIL_DRIVER=gae
 MAIL_HOST=mailtrap.io
@@ -16,11 +17,11 @@ MAIL_PASSWORD=
 MAIL_ENCRYPTION=
 LOG_HANDLER=syslog
 FILESYSTEM=gae
-DB_CONNECTION=HeddokoCoachingDBConnection
-CLOUD_SQL_SOCKET=/cloudsql/concise-decker-104921:databaserino
-CLOUD_SQL_HOST=173.194.83.75
-CLOUD_SQL_DATABASE=databaserino
-CLOUD_SQL_USERNAME=root
+DB_CONNECTION=sqlsrv
+CLOUD_SQL_SOCKET=
+CLOUD_SQL_HOST=
+CLOUD_SQL_DATABASE=
+CLOUD_SQL_USERNAME=
 CLOUD_SQL_PASSWORD=
 CACHE_SERVICES_FILE=false
 CACHE_CONFIG_FILE=false
