--- a/.env.production
+++ b/.env.production
@@ -17,7 +17,7 @@ MAIL_PASSWORD=
 MAIL_ENCRYPTION=
 LOG_HANDLER=syslog
 FILESYSTEM=gae
-DB_CONNECTION=sqlsrv
+DB_CONNECTION=mysql
 CLOUD_SQL_SOCKET=
 CLOUD_SQL_HOST=
 CLOUD_SQL_DATABASE=
