--- a/public/web.config
+++ b/public/web.config
@@ -3,9 +3,16 @@
     <system.webServer>
         <urlCompression doDynamicCompression="true" doStaticCompression="true" dynamicCompressionBeforeCache="true"/>
         <staticContent>
+
+            <!-- SVG -->
             <remove fileExtension=".svg" />
             <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
             <mimeMap fileExtension=".woff" mimeType="application/font-woff" />
+
+            <!-- MP4 -->
+			<remove fileExtension=".mp4"/>
+			<mimeMap fileExtension=".mp4" mimeType="video/mp4" />
+
             <clientCache httpExpires="Sun, 29 Mar 2020 00:00:00 GMT" cacheControlMode="UseExpires" />
         </staticContent>
         <httpProtocol>
