Added mime type for webm files

--- a/public/web.config
+++ b/public/web.config
@@ -13,6 +13,10 @@
 			<remove fileExtension=".mp4"/>
 			<mimeMap fileExtension=".mp4" mimeType="video/mp4" />
 
+            <!-- WebM -->
+			<remove fileExtension=".webm"/>
+			<mimeMap fileExtension=".webm" mimeType="video/webm" />
+
             <clientCache httpExpires="Sun, 29 Mar 2020 00:00:00 GMT" cacheControlMode="UseExpires" />
         </staticContent>
         <httpProtocol>
