--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_ENV=local
+APP_ENV=production
 APP_DEBUG=true
 APP_KEY=xUmasK2yT5JoStKtr7Ke9yjbG0PAwU1u
 DB_HOST=us-cdbr-azure-southcentral-e.cloudapp.net
