--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
 		"shpasser/gae-support-l5": "~1.0",
-		"zizaco/entrust": "dev-laravel-5"
+		"zizaco/entrust": "dev-laravel-5",
+        "doctrine/dbal": "^2.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
