--- a/bower.json
+++ b/bower.json
@@ -38,7 +38,8 @@
     "textAngular": "~1.3.7",
     "underscore": "~1.8.1",
     "weather-icons": "~1.3.2",
-    "ng-file-upload": "~9.1.1"
+    "ng-file-upload": "~9.1.1",
+    "intro.js": "~1.1.1"
   },
   "resolutions": {
     "angular": "~1.3.13"
