--- a/bower.json
+++ b/bower.json
@@ -39,7 +39,8 @@
     "underscore": "~1.8.1",
     "weather-icons": "~1.3.2",
     "ng-file-upload": "~9.1.1",
-    "intro.js": "~1.1.1"
+    "intro.js": "~1.1.1",
+    "eonasdan-bootstrap-datetimepicker": "~4.17.37"
   },
   "resolutions": {
     "angular": "~1.3.13"
