--- a/bower.json
+++ b/bower.json
@@ -38,11 +38,12 @@
     "textAngular": "~1.3.7",
     "underscore": "~1.8.1",
     "weather-icons": "~1.3.2",
-    "ng-file-upload": "~9.1.1",
+    "ng-file-upload": "~10.1.2",
     "intro.js": "~1.1.1",
     "eonasdan-bootstrap-datetimepicker": "~4.17.37"
   },
   "resolutions": {
-    "angular": "~1.3.13"
+    "angular": "~1.3.13",
+    "jquery": "~2.1.3"
   }
 }
