--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "devDependencies": {
     "grunt": "~0.4.5",
+    "grunt-assets-versioning": "^1.0.5",
     "grunt-bower-task": "~0.3.4",
     "grunt-cli": "~0.1.13",
     "grunt-contrib-clean": "~0.5.0",
