Updated mail driver

--- a/.env
+++ b/.env
@@ -12,8 +12,8 @@ CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=gae
 
-MAIL_DRIVER=gae
-#MAIL_DRIVER=mail
+#MAIL_DRIVER=gae
+MAIL_DRIVER=mail
 MAIL_HOST=mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=
