--- a/bower.json
+++ b/bower.json
@@ -41,7 +41,8 @@
     "intro.js": "~1.1.1",
     "eonasdan-bootstrap-datetimepicker": "~4.17.37",
     "selectize": "~0.12.1",
-    "angular-selectize2": "~3.0.1"
+    "angular-selectize2": "~3.0.1",
+    "angular-truncate": "*"
   },
   "resolutions": {
     "angular": "~1.3.13",
