Installed OAuth2 server composer package

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
 		"shpasser/gae-support-l5": "~1.0",
 		"zizaco/entrust": "dev-laravel-5",
         "doctrine/dbal": "^2.5",
-        "intervention/image": "^2.3"
+        "intervention/image": "^2.3",
+        "lucadegasperi/oauth2-server-laravel": "^5.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
