Updated bower & composer depencencies + updated to laravel 5.2

--- a/.env
+++ b/.env
@@ -55,6 +55,6 @@ CACHE_COMPILED_VIEWS=false
 ##############################
 
 SESSION_DRIVER=file
-QUEUE_DRIVER=gae
+#QUEUE_DRIVER=gae
 LOG_HANDLER=syslog
-FILESYSTEM=gae
+#FILESYSTEM=gae
