--- a/bower.json
+++ b/bower.json
@@ -34,8 +34,8 @@
     "jqvmap": "*",
     "morrisjs": "~0.5.1",
     "ngstorage": "~0.3.4",
-    "slimScroll": "~1.3.3",
-    "textAngular": "~1.3.7",
+    "slimScroll": "^1.3.3",
+    "textAngular": "^1.5.0",
     "underscore": "~1.8.1",
     "ng-file-upload": "~10.1.2",
     "intro.js": "~1.1.1",
