Refactoring Utilities service

--- a/.env
+++ b/.env
@@ -10,8 +10,8 @@ APP_KEY=xUmasK2yT5JoStKtr7Ke9yjbG0PAwU1u
 # Database settings
 ##############################
 
-#DB_CONNECTION=mysql
-DB_CONNECTION=sqlite
+DB_CONNECTION=mysql
+#DB_CONNECTION=sqlite
 
 DB_HOST=us-cdbr-azure-southcentral-e.cloudapp.net
 DB_PORT=5000
