--- a/.env
+++ b/.env
@@ -32,6 +32,7 @@ SQLITE_FILE=nfl-database.sqlite.demo
 ##############################
 
 #MAIL_DRIVER=gae
+#MAIL_DRIVER=log
 MAIL_DRIVER=mail
 MAIL_HOST=mailtrap.io
 MAIL_PORT=2525
