Upgraded to Laravel 5.2

--- a/.env.local
+++ b/.env.local
@@ -1,29 +1,59 @@
+#
+# App settings
+##############################
+
 APP_ENV=local
 APP_DEBUG=true
 APP_KEY=xUmasK2yT5JoStKtr7Ke9yjbG0PAwU1u
-DB_HOST=localhost
+
+#
+# Database settings
+##############################
+
+DB_CONNECTION=mysql
+#DB_CONNECTION=sqlite
+DB_HOST=us-cdbr-azure-southcentral-e.cloudapp.net
 DB_PORT=5000
-DB_DATABASE=heddoko_test
-DB_USERNAME=root
-DB_PASSWORD=mazmot
-CACHE_DRIVER=file
-SESSION_DRIVER=file
-QUEUE_DRIVER=gae
-MAIL_DRIVER=gae
+DB_DATABASE=HeddokoATi5VwPTd
+DB_USERNAME=bf446e27a5124e
+DB_PASSWORD=7ee876c4
+
+CLOUD_SQL_SOCKET=
+CLOUD_SQL_HOST=
+CLOUD_SQL_DATABASE=
+CLOUD_SQL_USERNAME=
+CLOUD_SQL_PASSWORD=
+
+SQLITE_FILE=nfl-database.sqlite.demo
+
+#
+# Mail settings
+##############################
+
+#MAIL_DRIVER=gae
+#MAIL_DRIVER=log
+MAIL_DRIVER=mail
 MAIL_HOST=mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=
 MAIL_PASSWORD=
 MAIL_ENCRYPTION=
-LOG_HANDLER=syslog
-FILESYSTEM=gae
-DB_CONNECTION=mysql
-CLOUD_SQL_SOCKET=
-CLOUD_SQL_HOST=173.194.251.203
-CLOUD_SQL_DATABASE=databaserino
-CLOUD_SQL_USERNAME=max
-CLOUD_SQL_PASSWORD=maxmaxmax
+
+#
+# Cache settings
+##############################
+
+CACHE_DRIVER=file
 CACHE_SERVICES_FILE=false
 CACHE_CONFIG_FILE=false
 CACHE_ROUTES_FILE=false
 CACHE_COMPILED_VIEWS=false
+
+#
+# Other settings
+##############################
+
+SESSION_DRIVER=file
+#QUEUE_DRIVER=gae
+LOG_HANDLER=syslog
+#FILESYSTEM=gae
